# GEN_AI_TASKS

./: .gitignore  GEN_AI_Training_Report_Lakshan.docx  README.md
Assignment/Day_1/: assignment1_prompt_library.docx  assignment2_debugging_prompts.docx
Assignment/Day_2/: RAG_vs_NonRAG_Comparison_Report.docx
Assignment/Day_2/RAG_System_for_Product_Manuals/: README.md  index.html  rag_manual.py  requirements.txt
Assignment/Day_3/: Debugging_a_Broken_Workflow.docx
Assignment/Day_3/Recruitment_Pipeline_Workflow/: README.md  app.py  index.html  recruitments.txt  requirements.txt
Class_Tasks/Day_2/: README.md  requirements.txt
Class_Tasks/Day_2/.archived/: ARCHIVED_FILES.md
Class_Tasks/Day_4/: README.md  app.py  index.html  requirements.txt
Hands_on_Lab/Day_4/research_app_created_in_crew_ai/: README.md  pyproject.toml
Hands_on_Lab/Day_4/research_app_created_in_crew_ai/src/digital_life_content_generation_team/: crew.py  main.py
Hands_on_Lab/Day_4/research_app_created_in_crew_ai/src/digital_life_content_generation_team/config/: agents.yaml  tasks.yaml
Hands_on_Lab_Day_1/Task_1/: app.py
Hands_on_Lab_Day_1/Task_2/: README.md  main.py
Hands_on_Lab_Day_1/Task_3/: README.md  agent.py  analyzer.py  groq_client.py  prompts.py  requirements.txt
Hands_on_Lab_Day_1/Task_4/: PROJECT_OVERVIEW.md  PROMPTS.md  README.md  app.py  index.html  requirements.txt  start.sh  test_setup.py
capstone_project/VedaKrishi_AI/: .env.example  .gitignore  DOCUMENTATION.md  LICENSE  README.md  VedaKrishi_AI_Report.docx  next.config.mjs  package.json  pnpm-lock.yaml  vercel.json
(+134 files in other folders)
