[project]
name = "digital_life_content_generation_team"
version = "0.1.0"
description = "digital_life_content_generation_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.13.0",
]

[project.scripts]
digital_life_content_generation_team = "digital_life_content_generation_team.main:run"
run_crew = "digital_life_content_generation_team.main:run"
train = "digital_life_content_generation_team.main:train"
replay = "digital_life_content_generation_team.main:replay"
test = "digital_life_content_generation_team.main:test"
run_with_trigger = "digital_life_content_generation_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
